--- a/doc/en.yaml
+++ b/doc/en.yaml
@@ -2,8 +2,8 @@
 name: 禅道开源版LDAP插件
 code: ldap
 type: extension
-site: https://github.com/shynome/zentao-ldap
-author: 'shynome<shynome@gmail.com>'
+site: http://www.zentao.net
+author: 'TigerLau<tigerliu1985@hotmail.com>'
 abstract: >
   支持从LDAP服务器上同步用户信息（账号、真实姓名、邮箱），以及使用LDAP验证登录。
 desc: >
@@ -19,17 +19,6 @@ install: |
     1.3 选择自动安装，按照页面提示即可。
   2. 手工安装，将代码解压缩，然后将目录拷贝到禅道对应的目录，比如module拷贝到zentao的module。
 releases:
-  1.2.1:
-    zentao:
-      compatible: 11.5
-    charge: free
-    date: 2019-05-22
-    conflicts: null
-    depends: null
-    license: LGPL
-    changelog: >
-      1. 修复在 11.5 上无法正常登录的问题
-      2. 修复测试连接经常失败的问题
   1.2:
     zentao:
       compatible: 7.0,7.1,7.2,7.2.4,7.2.5,7.3
