设置 1.2.3 的发布信息

--- a/ldap/doc/en.yaml
+++ b/ldap/doc/en.yaml
@@ -1,9 +1,9 @@
 ---
-name: 禅道开源版LDAP插件
+name: 禅道开源版 11.5 LDAP插件
 code: ldap
 type: extension
-site: http://www.zentao.net
-author: 'TigerLau<tigerliu1985@hotmail.com>'
+site: https://github.com/shynome/zentao-ldap
+author: 'shynome<shynome@gmail.com>'
 abstract: >
   支持从LDAP服务器上同步用户信息（账号、真实姓名、邮箱），以及使用LDAP验证登录。
 desc: >
@@ -19,6 +19,19 @@ install: |
     1.3 选择自动安装，按照页面提示即可。
   2. 手工安装，将代码解压缩，然后将目录拷贝到禅道对应的目录，比如module拷贝到zentao的module。
 releases:
+  1.2.3
+    zentao:
+      compatible: 11.5.stable
+      incompatible:
+    charge: free
+    date: 2019-05-24
+    conflicts: null
+    depends: null
+    license: LGPL
+    changelog: >
+      1. 修复 11.5 版本 ldap 账号登录失败
+      2. 修复 11.5 版本 密码二次验证失败
+      3. 修复设置页面-测试 服务器及账号是否可用 的按钮不支持复杂服务器的问题
   1.2:
     zentao:
       compatible: 7.0,7.1,7.2,7.2.4,7.2.5,7.3
