--- a/ldap/doc/zh-cn.yaml
+++ b/ldap/doc/zh-cn.yaml
@@ -19,6 +19,17 @@ install: |
     1.3 选择自动安装，按照页面提示即可。
   2. 手工安装，将代码解压缩，然后将目录拷贝到禅道对应的目录，比如module拷贝到zentao的module。
 releases:
+  1.3.0
+    zentao:
+      compatible: 11.5.stable
+      incompatible:
+    charge: free
+    date: 2019-05-24
+    conflicts: null
+    depends: null
+    license: LGPL
+    changelog: >
+      1. 禁止 ldap 用户修改账号密码
   1.2.3
     zentao:
       compatible: 11.5.stable
