--- a/ldap/doc/en.yaml
+++ b/ldap/doc/en.yaml
@@ -1,5 +1,5 @@
 ---
-name: 禅道开源版 11.5 LDAP插件
+name: 禅道开源版 12.3 LDAP插件
 code: ldap
 type: extension
 site: https://github.com/shynome/zentao-ldap
@@ -19,6 +19,17 @@ install: |
     1.3 选择自动安装，按照页面提示即可。
   2. 手工安装，将代码解压缩，然后将目录拷贝到禅道对应的目录，比如module拷贝到zentao的module。
 releases:
+  1.3.2
+    zentao:
+      compatible: 12.3.stable
+      incompatible:
+    charge: free
+    date: 2020-08-10
+    conflicts: null
+    depends: null
+    license: LGPL
+    changelog: >
+      1. 支持12.3
   1.3.1
     zentao:
       compatible: 11.5.stable
